--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -159,7 +159,7 @@
                                     <!-- Content Left -->
                                     <div class="col-sm-7"> <span class="tag" th:text="${sc.goodsTag}"></span> <a href="#." class="tittle"><p class="title fl" style="font-size: 25px;font-weight: bold" th:text="${sc.goodsName}"></p></a>
                                         <!-- Reviews -->
-                                        <p class="rev"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-star"></i> <span class="margin-left-10">5 个评论</span></p>
+                                        <p class="rev"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-star"></i> </p>
                                        <p class="tag" style="color: #0a0a0a"><span th:text="${sc.goodsDsp}"></span></p>
                                     </div>
                                     <!-- Content Right -->
