添加了 在未登录情况下 错误访问时跳转到登录界面的处理

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,7 +83,7 @@
         <div id="cater" class="collapse">
           <ul>
 
-            <li class="sub-menu"><a href="#.">男装</a>
+            <li class="sub-menu"><a href="/goods/search?goods_tag=男装&search_key=">男装</a>
               <ul>
                 <li><a href="#."> 上衣</a></li>
                 <li><a href="#."> 下装</a></li>
@@ -91,7 +91,7 @@
                 <li><a href="#."> 配饰</a>
               </ul>
             </li>
-            <li class="sub-menu"><a href="#.">女装</a>
+            <li class="sub-menu"><a href="/goods/search?goods_tag=女装&search_key=">女装</a>
               <ul>
                 <li><a href="#."> 上衣</a></li>
                 <li><a href="#."> 下装</a></li>
@@ -99,7 +99,7 @@
                 <li><a href="#."> 配饰</a>
               </ul>
             </li>
-            <li class="sub-menu"><a href="#.">数码3C</a>
+            <li class="sub-menu"><a href="/goods/search?goods_tag=3C&search_key=">数码3C</a>
               <ul>
                 <li><a href="#.">平板电脑</a></li>
                 <li><a href="#.">移动电话</a></li>
