--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -448,7 +448,9 @@
                   <i class="fas fa-check fa-lg mr-2"></i>
                   立即购买
                 </div>
+
                   <div type="button" class="btn btn-default btn-lg btn-flat swalDefaultSuccess">
+
                     <a th:href="'/goods/addgoodstocart?'+'userId=1'+'&goodsId='+${goodsdetails[0].goodsId}+'&price='+${goodsdetails[0].goodsPrice}+'&quantity=1'+'&goodsname='+${goodsdetails[0].goodsName}" >
                       <i class="fas fa-cart-plus fa-lg mr-2"></i>
                       添加到购物车
@@ -683,5 +685,6 @@
   });
 
 </script>
+<script src="/js/logincheck.js"></script>
 </body>
 </html>
