--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -35,6 +35,7 @@
   <!-- JavaScripts -->
   <script src="/js/vendors/modernizr.js"></script>
   <script src="/js/jquery-3.1.1.js"></script>
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
@@ -198,9 +199,11 @@
                       <input type="number" value="01">
 
                     </div>
-                      <div class="col-sm-4" style="display:inline-block;">
 
-                        <a href="#." class="btn-round"><i class="icon-basket-loaded margin-right-5"></i>加入购物车</a>
+                      <div class="col-sm-4" style="display:inline-block;">
+                        <a class="btn-round" onclick="myclick()" th:href="'/goods/addgoodstocart?'+'&goodsId='+${goodsdetails[0].goodsId}+'&price='+${goodsdetails[0].goodsPrice}+'&quantity=1'+'&goodsname='+${goodsdetails[0].goodsName}" >
+                        <i class="icon-basket-loaded margin-right-5"></i>
+                          加入购物车</a>
                       </div>
                     <div class="col-sm-4" style="display:inline-block;">
 
@@ -681,5 +684,6 @@ jQuery(document).ready(function($) {
 })
 
 </script>
+
 </body>
 </html>
