地址页面修改

--- a/src/main/resources/templates/user/ChangePassword.html
+++ b/src/main/resources/templates/user/ChangePassword.html
@@ -475,7 +475,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview" id="shopManagement">
-                        <a href="/user/MyProfile" class="nav-link">
+                        <a href="/user/ShopManage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 管理商店
