--- a/src/main/resources/templates/user/UserProfile.html
+++ b/src/main/resources/templates/user/UserProfile.html
@@ -273,7 +273,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview" id="shopManagement">
-                        <a href="/user/MyProfile" class="nav-link">
+                        <a href="/user/ShopManage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 管理商店
@@ -321,9 +321,9 @@
                                          alt="User profile picture" id="userImg">
                                 </div>
 
-                                <h3 class="profile-username text-center" id="shopName">胡潇的魔法小屋</h3>
+                                <h3 class="profile-username text-center" id="shopName"></h3>
 
-                                <p class="text-muted text-center" id="userName">胡潇</p>
+                                <p class="text-muted text-center" id="userName"></p>
 
                                 <ul class="list-group list-group-unbordered mb-3">
                                     <!--<li class="list-group-item">-->
@@ -333,7 +333,7 @@
                                         <!--<b>关注</b> <a class="float-right">543</a>-->
                                     <!--</li>-->
                                     <li class="list-group-item">
-                                        <b>商品</b> <a class="float-right" id="goodsQuantity">13,287</a>
+                                        <b>商品</b> <a class="float-right" id="goodsQuantity"></a>
                                     </li>
                                 </ul>
 
@@ -353,28 +353,27 @@
                                 <strong><i class="fas fa-book mr-1"></i>主营</strong>
 
                                 <p class="text-muted" id="mainBusiness">
-                                    魔法武器，魔法书，魔药原料，自制魔药等
                                 </p>
 
                                 <hr>
 
                                 <strong><i class="fas fa-map-marker-alt mr-1"></i> 地址</strong>
 
-                                <p class="text-muted" id="location">中国昆仑山顶</p>
+                                <p class="text-muted" id="location"></p>
 
                                 <hr>
 
                                 <strong><i class="fas fa-pencil-alt mr-1"></i> 店铺评价</strong>
 
                                 <p class="text-muted">
-                                    <span class="tag tag-danger" id="star">☆☆☆☆☆</span>
+                                    <span class="tag tag-danger" id="star"></span>
                                 </p>
 
                                 <hr>
 
                                 <strong><i class="far fa-file-alt mr-1"></i> 店铺简介</strong>
 
-                                <p class="text-muted" id="introduction">店铺的商品都经过真人测试，质量绝对有保障</p>
+                                <p class="text-muted" id="introduction"></p>
                             </div>
                             <!-- /.card-body -->
                         </div>
