--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -6,8 +6,7 @@
     <title>网上商城</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/jquery/dist/jquery.js"></script>
-    <!-- Font Awesome -->
+    <script src="/jquery/dist/jquery.js"></script>    <!-- Font Awesome -->
     <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -272,7 +271,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview" id="shopManagement">
-                        <a href="/user/MyProfile" class="nav-link">
+                        <a href="/user/ShopManage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 管理商店
